testsuite/tests/prep/errors/p.gpr
project P is
   package Compiler is
      for Default_Switches ("Ada") use ("-gnateDfoo=null");
   end Compiler;
end P;
